--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,6 +19,9 @@ jobs:
       with:
         node-version: '20'
         
+    - name: Install pnpm
+      run: npm install -g pnpm
+      
     - name: Setup pnpm
       uses: pnpm/action-setup@v4
       with:
